latest code changes

--- a/notebooks/32_openclsim_routing.ipynb
+++ b/notebooks/32_openclsim_routing.ipynb
@@ -368,13 +368,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7fb0fc83-71f3-4336-b6f9-f284c1345d74</td>\n",
+       "      <td>29a63d9c-a0f5-499f-95b5-5700cb189bd2</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7fb0fc83-71f3-4336-b6f9-f284c1345d74</td>\n",
+       "      <td>29a63d9c-a0f5-499f-95b5-5700cb189bd2</td>\n",
        "      <td>1970-01-01 03:55:32.655403</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
@@ -384,8 +384,8 @@
       ],
       "text/plain": [
        "                               Activity                  Timestamp  \\\n",
-       "0  7fb0fc83-71f3-4336-b6f9-f284c1345d74 1970-01-01 00:00:00.000000   \n",
-       "1  7fb0fc83-71f3-4336-b6f9-f284c1345d74 1970-01-01 03:55:32.655403   \n",
+       "0  29a63d9c-a0f5-499f-95b5-5700cb189bd2 1970-01-01 00:00:00.000000   \n",
+       "1  29a63d9c-a0f5-499f-95b5-5700cb189bd2 1970-01-01 03:55:32.655403   \n",
        "\n",
        "  ActivityState  \n",
        "0         START  \n",
@@ -684,29 +684,7 @@
    "execution_count": 23,
    "id": "b3d29b90-378d-4ba3-a3b6-7ad54d619d18",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "You are sailing to destination POINT (4.18519438284601 52.8003352586416), which is not equal to start of the route POINT (4.18519438284601 52.8003352586416)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "File \u001b[0;32m~/src/OpenCLSim/src/openclsim/model/base_activities.py:284\u001b[0m, in \u001b[0;36mGenericActivity.delayed_process\u001b[0;34m(self, activity_log, env)\u001b[0m\n\u001b[1;32m    274\u001b[0m         log\u001b[38;5;241m.\u001b[39mlog_entry_v1(\n\u001b[1;32m    275\u001b[0m             t\u001b[38;5;241m=\u001b[39menv\u001b[38;5;241m.\u001b[39mnow,\n\u001b[1;32m    276\u001b[0m             activity_id\u001b[38;5;241m=\u001b[39mactivity_log\u001b[38;5;241m.\u001b[39mid,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    281\u001b[0m             },\n\u001b[1;32m    282\u001b[0m         )\n\u001b[0;32m--> 284\u001b[0m \u001b[38;5;28;01myield from\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmain_process_function(activity_log\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m, env\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39menv)\n",
-      "File \u001b[0;32m~/src/OpenCLSim/src/openclsim/model/move_activity.py:103\u001b[0m, in \u001b[0;36mMoveActivity.main_process_function\u001b[0;34m(self, activity_log, env)\u001b[0m\n\u001b[1;32m    102\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmover\u001b[38;5;241m.\u001b[39mactivity_id \u001b[38;5;241m=\u001b[39m activity_log\u001b[38;5;241m.\u001b[39mid\n\u001b[0;32m--> 103\u001b[0m \u001b[38;5;28;01myield from\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmover\u001b[38;5;241m.\u001b[39mmove(\n\u001b[1;32m    104\u001b[0m     destination\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdestination,\n\u001b[1;32m    105\u001b[0m     engine_order\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mengine_order,\n\u001b[1;32m    106\u001b[0m     duration\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mduration,\n\u001b[1;32m    107\u001b[0m )\n\u001b[1;32m    109\u001b[0m activity_log\u001b[38;5;241m.\u001b[39mlog_entry_v1(\n\u001b[1;32m    110\u001b[0m     t\u001b[38;5;241m=\u001b[39menv\u001b[38;5;241m.\u001b[39mnow,\n\u001b[1;32m    111\u001b[0m     activity_id\u001b[38;5;241m=\u001b[39mactivity_log\u001b[38;5;241m.\u001b[39mid,\n\u001b[1;32m    112\u001b[0m     activity_state\u001b[38;5;241m=\u001b[39mcore\u001b[38;5;241m.\u001b[39mLogState\u001b[38;5;241m.\u001b[39mSTOP,\n\u001b[1;32m    113\u001b[0m )\n",
-      "File \u001b[0;32m~/src/OpenCLSim/src/openclsim/core/movable.py:84\u001b[0m, in \u001b[0;36mMovable.move\u001b[0;34m(self, destination, duration, engine_order)\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m duration \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m---> 84\u001b[0m     duration \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute_duration\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgeometry\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdestination\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgeometry\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     86\u001b[0m \u001b[38;5;66;03m# Check out the time based on duration of sailing event\u001b[39;00m\n",
-      "File \u001b[0;32m~/src/OpenCLSim/src/openclsim/core/movable.py:124\u001b[0m, in \u001b[0;36mMovable.compute_duration\u001b[0;34m(self, origin, destination, engine_order)\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;124;03m\"\"\"Determine the duration based on great circle path from origin to destination.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 124\u001b[0m distance \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute_distance\u001b[49m\u001b[43m(\u001b[49m\u001b[43morigin\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdestination\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    125\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m distance \u001b[38;5;241m/\u001b[39m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mv \u001b[38;5;241m*\u001b[39m engine_order)\n",
-      "File \u001b[0;32m~/src/OpenCLSim/src/openclsim/core/movable.py:240\u001b[0m, in \u001b[0;36mRoutable.compute_distance\u001b[0;34m(self, origin, destination)\u001b[0m\n\u001b[1;32m    237\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m shapely\u001b[38;5;241m.\u001b[39mequals_exact(\n\u001b[1;32m    238\u001b[0m     origin, a_geometry, tolerance\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.01\u001b[39m\n\u001b[1;32m    239\u001b[0m ), \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou are sailing from origin \u001b[39m\u001b[38;5;132;01m{\u001b[39;00morigin\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, which is not equal to start of the route \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma_geometry\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m--> 240\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m shapely\u001b[38;5;241m.\u001b[39mequals_exact(\n\u001b[1;32m    241\u001b[0m     destination, a_geometry, tolerance\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.01\u001b[39m\n\u001b[1;32m    242\u001b[0m ), \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou are sailing to destination \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdestination\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, which is not equal to start of the route \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mb_geometry\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    244\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m a, b \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroute[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroute[\u001b[38;5;241m1\u001b[39m:]):\n",
-      "\u001b[0;31mAssertionError\u001b[0m: You are sailing to destination POINT (4.18519438284601 52.8003352586416), which is not equal to start of the route POINT (4.18519438284601 52.8003352586416)",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [23]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# initate the simpy processes defined in the 'move activity' and run simpy\u001b[39;00m\n\u001b[1;32m      2\u001b[0m openclsim\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mregister_processes([activity])\n\u001b[0;32m----> 3\u001b[0m \u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.virtualenvs/openclsim/lib/python3.9/site-packages/simpy/core.py:254\u001b[0m, in \u001b[0;36mEnvironment.run\u001b[0;34m(self, until)\u001b[0m\n\u001b[1;32m    252\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    253\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m--> 254\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    255\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m StopSimulation \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[1;32m    256\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m exc\u001b[38;5;241m.\u001b[39margs[\u001b[38;5;241m0\u001b[39m]  \u001b[38;5;66;03m# == until.value\u001b[39;00m\n",
-      "File \u001b[0;32m~/.virtualenvs/openclsim/lib/python3.9/site-packages/simpy/core.py:206\u001b[0m, in \u001b[0;36mEnvironment.step\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    204\u001b[0m exc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtype\u001b[39m(event\u001b[38;5;241m.\u001b[39m_value)(\u001b[38;5;241m*\u001b[39mevent\u001b[38;5;241m.\u001b[39m_value\u001b[38;5;241m.\u001b[39margs)\n\u001b[1;32m    205\u001b[0m exc\u001b[38;5;241m.\u001b[39m__cause__ \u001b[38;5;241m=\u001b[39m event\u001b[38;5;241m.\u001b[39m_value\n\u001b[0;32m--> 206\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exc\n",
-      "\u001b[0;31mAssertionError\u001b[0m: You are sailing to destination POINT (4.18519438284601 52.8003352586416), which is not equal to start of the route POINT (4.18519438284601 52.8003352586416)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# initate the simpy processes defined in the 'move activity' and run simpy\n",
     "openclsim.model.register_processes([activity])\n",
@@ -724,10 +702,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "ccea0cee-99df-4fec-98b6-06f344c594ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>ActivityState</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bb66f28b-094f-489f-9953-b923d6fe6f07</td>\n",
+       "      <td>1970-01-01 00:00:00.000000</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>bb66f28b-094f-489f-9953-b923d6fe6f07</td>\n",
+       "      <td>1970-01-01 03:58:50.885452</td>\n",
+       "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Activity                  Timestamp  \\\n",
+       "0  bb66f28b-094f-489f-9953-b923d6fe6f07 1970-01-01 00:00:00.000000   \n",
+       "1  bb66f28b-094f-489f-9953-b923d6fe6f07 1970-01-01 03:58:50.885452   \n",
+       "\n",
+       "  ActivityState  \n",
+       "0         START  \n",
+       "1          STOP  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(openclsim.plot.get_log_dataframe(activity))"
    ]
