support and test sailing back and forth

--- a/notebooks/32_openclsim_routing.ipynb
+++ b/notebooks/32_openclsim_routing.ipynb
@@ -303,12 +303,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "activity = openclsim.model.MoveActivity(\n",
+    "move_to_activity = openclsim.model.MoveActivity(\n",
     "    env=env,\n",
-    "    name=\"Move activity\",\n",
+    "    name=\"Move to activity\",\n",
     "    registry=registry,\n",
     "    mover=vessel,\n",
     "    destination=to_site,\n",
+    ")\n",
+    "\n",
+    "move_back_activity = openclsim.model.MoveActivity(\n",
+    "    env=env,\n",
+    "    name=\"Move back activity\",\n",
+    "    registry=registry,\n",
+    "    mover=vessel,\n",
+    "    destination=from_site,\n",
+    ")\n",
+    "\n",
+    "activity = openclsim.model.SequentialActivity(\n",
+    "    sub_processes=[move_to_activity, move_back_activity], \n",
+    "    registry=registry, \n",
+    "    name=\"Move to and back\", \n",
+    "    env=env\n",
     ")"
    ]
   },
@@ -363,20 +378,58 @@
        "      <th>Activity</th>\n",
        "      <th>Timestamp</th>\n",
        "      <th>ActivityState</th>\n",
+       "      <th>type</th>\n",
+       "      <th>ref</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>29a63d9c-a0f5-499f-95b5-5700cb189bd2</td>\n",
+       "      <td>0332aee3-1cb9-4e96-b098-ed033a060d7d</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>29a63d9c-a0f5-499f-95b5-5700cb189bd2</td>\n",
+       "      <td>0332aee3-1cb9-4e96-b098-ed033a060d7d</td>\n",
+       "      <td>1970-01-01 00:00:00.000000</td>\n",
+       "      <td>START</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>e01de8ad-fc59-4d6c-812d-d2b19f2f9fe7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0332aee3-1cb9-4e96-b098-ed033a060d7d</td>\n",
        "      <td>1970-01-01 03:55:32.655403</td>\n",
        "      <td>STOP</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>e01de8ad-fc59-4d6c-812d-d2b19f2f9fe7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0332aee3-1cb9-4e96-b098-ed033a060d7d</td>\n",
+       "      <td>1970-01-01 03:55:32.655403</td>\n",
+       "      <td>START</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>c4257f48-0362-412f-9440-8a1b73840d4f</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0332aee3-1cb9-4e96-b098-ed033a060d7d</td>\n",
+       "      <td>1970-01-01 07:51:05.310807</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>c4257f48-0362-412f-9440-8a1b73840d4f</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0332aee3-1cb9-4e96-b098-ed033a060d7d</td>\n",
+       "      <td>1970-01-01 07:51:05.310807</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -384,12 +437,20 @@
       ],
       "text/plain": [
        "                               Activity                  Timestamp  \\\n",
-       "0  29a63d9c-a0f5-499f-95b5-5700cb189bd2 1970-01-01 00:00:00.000000   \n",
-       "1  29a63d9c-a0f5-499f-95b5-5700cb189bd2 1970-01-01 03:55:32.655403   \n",
+       "0  0332aee3-1cb9-4e96-b098-ed033a060d7d 1970-01-01 00:00:00.000000   \n",
+       "1  0332aee3-1cb9-4e96-b098-ed033a060d7d 1970-01-01 00:00:00.000000   \n",
+       "2  0332aee3-1cb9-4e96-b098-ed033a060d7d 1970-01-01 03:55:32.655403   \n",
+       "3  0332aee3-1cb9-4e96-b098-ed033a060d7d 1970-01-01 03:55:32.655403   \n",
+       "4  0332aee3-1cb9-4e96-b098-ed033a060d7d 1970-01-01 07:51:05.310807   \n",
+       "5  0332aee3-1cb9-4e96-b098-ed033a060d7d 1970-01-01 07:51:05.310807   \n",
        "\n",
-       "  ActivityState  \n",
-       "0         START  \n",
-       "1          STOP  "
+       "  ActivityState        type                                   ref  \n",
+       "0         START         NaN                                   NaN  \n",
+       "1         START  subprocess  e01de8ad-fc59-4d6c-812d-d2b19f2f9fe7  \n",
+       "2          STOP  subprocess  e01de8ad-fc59-4d6c-812d-d2b19f2f9fe7  \n",
+       "3         START  subprocess  c4257f48-0362-412f-9440-8a1b73840d4f  \n",
+       "4          STOP  subprocess  c4257f48-0362-412f-9440-8a1b73840d4f  \n",
+       "5          STOP         NaN                                   NaN  "
       ]
      },
      "metadata": {},
@@ -670,18 +731,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "activity = openclsim.model.MoveActivity(\n",
+    "move_to_activity = openclsim.model.MoveActivity(\n",
     "    env=env,\n",
-    "    name=\"Move activity\",\n",
+    "    name=\"Move to activity\",\n",
     "    registry=registry,\n",
     "    mover=vessel,\n",
     "    destination=to_site,\n",
-    ")"
+    ")\n",
+    "\n",
+    "move_back_activity = openclsim.model.MoveActivity(\n",
+    "    env=env,\n",
+    "    name=\"Move back activity\",\n",
+    "    registry=registry,\n",
+    "    mover=vessel,\n",
+    "    destination=from_site,\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "af6d8095-407c-4205-9e7d-8fff40f42ce6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "activity = openclsim.model.SequentialActivity(\n",
+    "    sub_processes=[move_to_activity, move_back_activity], \n",
+    "    registry=registry, \n",
+    "    name=\"Move to and back\", \n",
+    "    env=env\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "b3d29b90-378d-4ba3-a3b6-7ad54d619d18",
    "metadata": {},
    "outputs": [],
@@ -702,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "ccea0cee-99df-4fec-98b6-06f344c594ae",
    "metadata": {},
    "outputs": [
@@ -730,20 +814,58 @@
        "      <th>Activity</th>\n",
        "      <th>Timestamp</th>\n",
        "      <th>ActivityState</th>\n",
+       "      <th>type</th>\n",
+       "      <th>ref</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>bb66f28b-094f-489f-9953-b923d6fe6f07</td>\n",
+       "      <td>fa2729d0-7f09-4d42-8483-6dfefd992352</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>bb66f28b-094f-489f-9953-b923d6fe6f07</td>\n",
+       "      <td>fa2729d0-7f09-4d42-8483-6dfefd992352</td>\n",
+       "      <td>1970-01-01 00:00:00.000000</td>\n",
+       "      <td>START</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>85d1b1a6-6caa-40a6-9184-c52f72dba5f5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>fa2729d0-7f09-4d42-8483-6dfefd992352</td>\n",
        "      <td>1970-01-01 03:58:50.885452</td>\n",
        "      <td>STOP</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>85d1b1a6-6caa-40a6-9184-c52f72dba5f5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>fa2729d0-7f09-4d42-8483-6dfefd992352</td>\n",
+       "      <td>1970-01-01 03:58:50.885452</td>\n",
+       "      <td>START</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>aa2f3151-37bb-4f40-aefd-aa8e0471b68d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>fa2729d0-7f09-4d42-8483-6dfefd992352</td>\n",
+       "      <td>1970-01-01 07:57:41.770904</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>aa2f3151-37bb-4f40-aefd-aa8e0471b68d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>fa2729d0-7f09-4d42-8483-6dfefd992352</td>\n",
+       "      <td>1970-01-01 07:57:41.770904</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -751,12 +873,20 @@
       ],
       "text/plain": [
        "                               Activity                  Timestamp  \\\n",
-       "0  bb66f28b-094f-489f-9953-b923d6fe6f07 1970-01-01 00:00:00.000000   \n",
-       "1  bb66f28b-094f-489f-9953-b923d6fe6f07 1970-01-01 03:58:50.885452   \n",
+       "0  fa2729d0-7f09-4d42-8483-6dfefd992352 1970-01-01 00:00:00.000000   \n",
+       "1  fa2729d0-7f09-4d42-8483-6dfefd992352 1970-01-01 00:00:00.000000   \n",
+       "2  fa2729d0-7f09-4d42-8483-6dfefd992352 1970-01-01 03:58:50.885452   \n",
+       "3  fa2729d0-7f09-4d42-8483-6dfefd992352 1970-01-01 03:58:50.885452   \n",
+       "4  fa2729d0-7f09-4d42-8483-6dfefd992352 1970-01-01 07:57:41.770904   \n",
+       "5  fa2729d0-7f09-4d42-8483-6dfefd992352 1970-01-01 07:57:41.770904   \n",
        "\n",
-       "  ActivityState  \n",
-       "0         START  \n",
-       "1          STOP  "
+       "  ActivityState        type                                   ref  \n",
+       "0         START         NaN                                   NaN  \n",
+       "1         START  subprocess  85d1b1a6-6caa-40a6-9184-c52f72dba5f5  \n",
+       "2          STOP  subprocess  85d1b1a6-6caa-40a6-9184-c52f72dba5f5  \n",
+       "3         START  subprocess  aa2f3151-37bb-4f40-aefd-aa8e0471b68d  \n",
+       "4          STOP  subprocess  aa2f3151-37bb-4f40-aefd-aa8e0471b68d  \n",
+       "5          STOP         NaN                                   NaN  "
       ]
      },
      "metadata": {},
