--- a/notebooks/32_openclsim_opentnsim.ipynb
+++ b/notebooks/32_openclsim_opentnsim.ipynb
@@ -1,8 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d7c55f61-8f73-4f3f-9241-8992bb5aa60e",
+   "metadata": {},
+   "source": [
+    "# Combining OpenCLSim and OpenTNSim\n",
+    "\n",
+    "This notebook shows how to combine elements from OpenCLSim and OpenTNSim. You need OpenTNSim>=1.3.0 and OpenCLSim>=1.6 for this notebook to work. Since that version the core components (`Locatable`, `Identifiable`, `SimpyObject`) of opentnsim are referring to the versions from OpenCLSim. \n",
+    "\n",
+    "In this notebook we show how to use the \"move\" functionality of OpenTNSim with the activity workflow from OpenCLSim.\n",
+    "OpenCLSim does not allow sailing over graphs by default. On the other hand, OpenTNSim does not have the concept of activities."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bf80dcb5",
    "metadata": {},
    "outputs": [],
@@ -25,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3e4a3b86",
    "metadata": {},
    "outputs": [],
@@ -39,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3be50ba8",
    "metadata": {},
    "outputs": [],
@@ -76,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b2ee2d9a",
    "metadata": {},
    "outputs": [],
@@ -99,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5bba2225",
    "metadata": {},
    "outputs": [],
@@ -107,12 +120,12 @@
     "# create a location based graph (with geometry as nodes)\n",
     "my_env.graph.add_node(location_from_site, **{\"geometry\": location_from_site})\n",
     "my_env.graph.add_node(location_to_site, **{\"geometry\": location_to_site})\n",
-    "my_env.graph.add_edge(location_from_site, location_to_site)\n"
+    "my_env.graph.add_edge(location_from_site, location_to_site)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "bed66786",
    "metadata": {},
    "outputs": [],
@@ -133,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "34f963b3",
    "metadata": {},
    "outputs": [],
@@ -144,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "88cabb7c",
    "metadata": {},
    "outputs": [],
@@ -160,23 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "485057d1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mover vessel01 destination to_site\n",
-      "getting location from to_site\n",
-      "moving to POINT (4.25222222 52.11428333)\n",
-      "moving over  (<POINT (4.181 52.187)>, <POINT (4.252 52.114)>)\n",
-      "mover vessel01 is now at POINT (4.25222222 52.11428333)\n",
-      "mover vessel01 is now at POINT (4.25222222 52.11428333)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# initate the simpy processes defined in the 'move activity' and run simpy\n",
     "openclsim.model.register_processes([activity])\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "44e6f1a7",
    "metadata": {},
    "outputs": [
@@ -218,13 +218,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7017847c-7178-4b59-bc7d-95ae3bf5ba85</td>\n",
+       "      <td>adbf9f81-36fd-4032-9c30-2a94d12eda58</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7017847c-7178-4b59-bc7d-95ae3bf5ba85</td>\n",
+       "      <td>adbf9f81-36fd-4032-9c30-2a94d12eda58</td>\n",
        "      <td>1970-01-01 00:15:42.824591</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
@@ -234,8 +234,8 @@
       ],
       "text/plain": [
        "                               Activity                  Timestamp  \\\n",
-       "0  7017847c-7178-4b59-bc7d-95ae3bf5ba85 1970-01-01 00:00:00.000000   \n",
-       "1  7017847c-7178-4b59-bc7d-95ae3bf5ba85 1970-01-01 00:15:42.824591   \n",
+       "0  adbf9f81-36fd-4032-9c30-2a94d12eda58 1970-01-01 00:00:00.000000   \n",
+       "1  adbf9f81-36fd-4032-9c30-2a94d12eda58 1970-01-01 00:15:42.824591   \n",
        "\n",
        "  ActivityState  \n",
        "0         START  \n",
@@ -249,6 +249,14 @@
    "source": [
     "display(openclsim.plot.get_log_dataframe(activity))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c98fe858-e9c4-406f-ae8a-454b3850363f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -267,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
