--- a/notebooks/40_Backhoe_Barge.ipynb
+++ b/notebooks/40_Backhoe_Barge.ipynb
@@ -45,6 +45,7 @@
     "import pandas as pd\n",
     "import shapely\n",
     "from numpy import random\n",
+    "import opentnsim\n",
     "\n",
     "# libraries used for the simulation\n",
     "import simpy\n",
